--- a/libraries/jquery.plugins/sequence/themes/modern-slide-in/css/sequencejs-theme.modern-slide-in.css
+++ b/libraries/jquery.plugins/sequence/themes/modern-slide-in/css/sequencejs-theme.modern-slide-in.css
@@ -13,37 +13,6 @@ http://www.opensource.org/licenses/mit-license.php | http://www.gnu.org/licenses
 Sequence.js and its dependencies are (c) Ian Lunn Design 2012 unless otherwise stated.
 Aside from these comments, you may modify and distribute this file as you please. Have fun!
  */
-body {
-	background: #323333;
-	color: white;
-	font-family: sans-serif;
-	font-size: 0.625em;
-	min-width: 320px;
-}
-
-#header-container{
-	background: #d9d9d9;
-	border-bottom: black solid 5px;
-	width: 100%;
-}
-
-#header {
-	background:  #D9D9D9;
-	height: 600px;
-	margin: 0 auto;
-	position: relative;
-	overflow: hidden;
-	max-width: 1280px;
-	width: 100%;
-}
-
-#main, #aside{
-	font-size: 1.6em;
-}
-
-a{
-	color: white;
-}
 
 .next,.prev {
 	color: white;
@@ -165,14 +134,14 @@ a{
 	backface-visibility: hidden;
 }
 
-h2 {
+#sequence h2 {
 	color: white;
 	font-family: 'Sirin Stencil', serif;
 	font-weight: bold;
 	text-transform: uppercase;
 }
 
-h3 {
+#sequence h3 {
 	font-family: 'Ruluko', serif;
 }
 
@@ -352,7 +321,7 @@ and (max-width : 568px) {
 		margin-left: -20%;
 	}
 	
-	.title{
+	#sequence .title{
 		background: #a1a1a1;
 		background: rgba(0,0,0,0.3);
 		bottom: 0;
