--- a/libraries/jquery.plugins/sequence/themes/modern-slide-in/css/sequencejs-theme.modern-slide-in.css
+++ b/libraries/jquery.plugins/sequence/themes/modern-slide-in/css/sequencejs-theme.modern-slide-in.css
@@ -239,7 +239,7 @@ Aside from these comments, you may modify and distribute this file as you please
 	min-width: 225px; /*prevents the model from shrinking when the browser is resized*/
 	max-width: 266px;
 }
-
+/*
 .model.animate-in {
 	left: 15%;
 	opacity: 1;
@@ -261,7 +261,7 @@ Aside from these comments, you may modify and distribute this file as you please
 	-ms-transition-duration: .5s;
 	transition-duration: .5s;
 }
-
+*/
 @media only screen and (min-width : 992px) {
 	.title{
 		width: 42%;
