--- a/libraries/jquery.plugins/sequence/themes/modern-slide-in/css/sequencejs-theme.modern-slide-in.css
+++ b/libraries/jquery.plugins/sequence/themes/modern-slide-in/css/sequencejs-theme.modern-slide-in.css
@@ -231,7 +231,7 @@ Aside from these comments, you may modify and distribute this file as you please
 .model {
 	left: 30%;
 	bottom: -48%;
-	/*opacity: 0;*/
+	opacity: 0;
 	position: relative;
 	height: auto !important;
 	max-height: 568px !important;
@@ -239,29 +239,31 @@ Aside from these comments, you may modify and distribute this file as you please
 	min-width: 225px; /*prevents the model from shrinking when the browser is resized*/
 	max-width: 266px;
 }
-/*
+
 .model.animate-in {
 	left: 15%;
 	opacity: 1;
-
+/*
 	-webkit-transition-duration: 1s;
 	-moz-transition-duration: 1s;
 	-o-transition-duration: 1s;
 	-ms-transition-duration: 1s;
 	transition-duration: 1s;
+*/
 }
 
 .model.animate-out {
 	left: 15%;
 	opacity: 0;
-
+/*
 	-webkit-transition-duration: .5s;
 	-moz-transition-duration: .5s;
 	-o-transition-duration: .5s;
 	-ms-transition-duration: .5s;
 	transition-duration: .5s;
-}
 */
+}
+
 @media only screen and (min-width : 992px) {
 	.title{
 		width: 42%;
